--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <link href="connect4.css" rel="stylesheet">
 </head>
 <body>
+  <form>
+    <input id="player1-color" placeholder="Color of Player 1">
+    <input id="player2-color" placeholder="Color of Player 2">
+  </form>
+  <button id="start-game">Start Game</button>
+  <div id="game">
+    <table id="board"></table>
+  </div>
 
-<div id="game">
-  <table id="board"></table>
-</div>
-
-<script src="connect4.js"></script>
-
+  <script src="connect4.js"></script>
 </body>
 </html>
